# mc-proxy-v3

./: Cargo.toml  test.json
codegen/: Cargo.toml
codegen/src/: main.rs
mc-networking/: Cargo.toml
mc-networking-macros/src/: lib.rs
mc-networking/mc-networking-macros/: Cargo.toml
mc-networking/mc-networking-macros/src/: lib.rs
mc-networking/src/: lib.rs  macros.rs  traits.rs  types.rs  versions.rs
mc-networking/src/packets/: handshaking.rs  login.rs  mod.rs  status.rs
mc-networking/src/packets/handshaking/: mod.rs  serverbound.rs
mc-networking/src/packets/handshaking/serverbound/: handshake.rs  packet_set_protocol.rs
mc-networking/src/packets/login/: serverbound.rs
mc-networking/src/packets/status/: clientbound.rs  mod.rs  serverbound.rs
mc-networking/src/packets/status/clientbound/: ping_response.rs  status_response.rs
mc-networking/src/packets/status/serverbound/: ping_request.rs  status_request.rs
mc-networking/src/types/: bool.rs  chat.rs  identifier.rs  nums.rs  option.rs  string.rs  uuid.rs  varint.rs  varlong.rs  vec.rs
minecraft-data-test/: Cargo.toml
minecraft-data-test/src/: main.rs
proxy/: Cargo.toml
proxy/src/: main.rs  packet.rs  state.rs  utils.rs
src/: packet.rs  utils.rs
