[package]
edition = "2021"
name = "minecraft-data-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
convert_case = "0.6.0"
minecraft-data-rs = {git = "https://github.com/zegevlier/minecraft-data-rs.git", branch = "main"}
proc-macro2 = "1.0.47"
quote = "1.0.21"
rustfmt = "0.10.0"
structstruck = "0.3.0"
