[package]
edition = "2021"
name = "proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
color-eyre = "0.6.2"
tokio = {version = "1.21.2", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
]}

mc-networking = {path = "../mc-networking"}
