[package]
edition = "2021"
name = "proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tokio = {version = "1.24.2", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
]}

mc-networking = {path = "../mc-networking"}
